[package]
name = 'pallet-buyback'
version = '0.1.0'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Polket <https://www.polket.io>']
homepage = 'https://www.polket.io'
edition = '2021'
license = "GPL-3.0-or-later"
publish = false
repository = 'https://github.com/polketio/polket-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
num-integer = { default-features = false, version = "0.1.45"}
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
scale-info = { default-features = false, features = ['derive'], version = '2.1.2'}
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0'}
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0'}

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
p256 = { default-features = false, version = "0.10.1", features = ["ecdsa"]}

# local libraries
pallet-support = { default-features = false, path='../support' }
pallet-unique-id = { default-features = false, path='../unique-id' }

[dev-dependencies]
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
hex-literal = '0.3.1'
bitcoin_hashes = { default-features = false,  version = '0.10.0' }
sha2 = "0.10.2"

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
    'hex/std',
    'serde_json/std',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'num-integer/std',
    'p256/std',
]
try-runtime = ['frame-support/try-runtime']
