[package]
name = "vfe-order"
version = '0.1.0'
description = 'This module providesmerchants to create coupons for use in their sales activities.'
authors = ['Polket <https://www.polket.io>']
homepage = 'https://www.polket.io'
edition = '2021'
license = "GPL-3.0-or-later"
publish = false
repository = 'https://github.com/polket/polket-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]

codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
bitcoin_hashes = { default-features = false,  version = '0.10.0' }
p256 = { default-features = false, version = "0.11.1", features = ["ecdsa"]}
scale-info = { default-features = false, features = ['derive'], version = '2.1.2'}
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '6.0.0' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
num-integer = { default-features = false, version = "0.1.45"}
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
pallet-uniques = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28", version = '4.0.0-dev' }
pallet-support = { default-features = false, path='../support' }
pallet-unique-id = { default-features = false, path='../unique-id' }

vfemart-traits = { default-features = false, path = "../vfemart-traits" }
serde = { version = "1.0.111", optional = true }


[dev-dependencies]
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/nftt-studio/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }

[features]
default = ["std"]
std = [
	
	'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
	'bitcoin_hashes/std',
    'pallet-assets/std',
    'pallet-balances/std',
    'pallet-uniques/std',
    'pallet-support/std',
    'p256/std',
	"serde",
]

try-runtime = ['frame-support/try-runtime']