[package]
name = "pallet-vfe-rpc"
version = "0.1.0"
authors = ['Polket <https://www.polket.io>']
homepage = 'https://www.polket.io'
edition = '2021'
license = "GPL-3.0-or-later"
publish = false
repository = 'https://github.com/polket/polket-node/'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
tracing = { version = "0.1.29" }
tracing-core = { version = "0.1.28" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

pallet-vfe-rpc-runtime-api = { path = "runtime-api", version = "0.1.0" }
