[package]
name = "pallet-vfe-rpc-runtime-api"
version = "0.1.0"
authors = ['Polket <https://www.polket.io>']
homepage = 'https://www.polket.io'
edition = '2021'
license = "GPL-3.0-or-later"
publish = false
repository = 'https://github.com/polket/polket-node/'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std"
]
